Fix bugs and add improvements